--- a/styles/main.css
+++ b/styles/main.css
@@ -42,3 +42,78 @@ ol[class] {
   margin-top: var(--flow-spacer, var(--spacer));
 }
 /* Start Here */
+/* Start Here */
+.homepage{
+  margin: 0 auto;
+  
+}
+.navigation {
+	position: sticky;
+	justify-content: space-between;
+  display: flex;
+	align-items: center;
+	height: 100px;
+	top: 0;
+}
+.nav_title{
+  display: inline-block;
+  font-size: 18px;
+  font-family:'Poppins', sans-serif;
+}
+.navigation_title{
+  display: inline;
+}
+.top{
+  text-decoration: none;
+  color: #3D2892;
+  margin-right: 80px;
+  margin-left: -60px;
+}
+.logo{
+  font-family:Calibri;
+  font-weight: bold;
+  font-size: 30px;
+  color: #3D2892;
+  margin-left: 10%;
+}
+.logo1{
+  color:#F55D3A;
+}
+.Image{
+  margin-left: 72%;
+  position: absolute;
+}
+h1{
+  font-family: 'Poppins', sans-serif;
+  font-size: 64px;
+  text-transform: uppercase;
+  margin-left:12% ;
+  margin-top: 3%;
+  color: #F55D3A;
+}
+h2{
+  font-size:32px ;
+  margin-left:12%;
+  margin-top: 3%;
+  color: #4A4A4A;;
+}
+  
+.started{
+  filter: drop-shadow(0px 0px 5px gray);
+  margin-top: 3%;
+  background-color: #3D2892;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 20px;
+  text-align: center;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 16px;
+  font-family:'Poppins', sans-serif  ;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left:12%;
+  
+}
+
