--- a/styles/main.css
+++ b/styles/main.css
@@ -67,7 +67,7 @@ ol[class] {
   text-decoration: none;
   color: #3D2892;
   margin-right: 80px;
-  margin-left: -60px;
+  margin-left: -70px;
 }
 .logo{
   font-family:Calibri;
@@ -76,11 +76,11 @@ ol[class] {
   color: #3D2892;
   margin-left: 10%;
 }
-.logo1{
+.firstlogo{
   color:#F55D3A;
 }
 .Image{
-  margin-left: 72%;
+  margin-left: 70%;
   position: absolute;
 }
 h1{
@@ -98,7 +98,7 @@ h2{
   color: #4A4A4A;;
 }
   
-.started{
+.Getstarted{
   filter: drop-shadow(0px 0px 5px gray);
   margin-top: 3%;
   background-color: #3D2892;
@@ -114,6 +114,118 @@ h2{
   cursor: pointer;
   font-weight: bold;
   margin-left:12%;
+
+
+}
+
+.overall, .top-authors, .name, .fp
+, .ft, .fs{
+  font-family:'Poppins', sans-serif;
+
+}
+.secondoverall{
+  text-align: center;
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+.top-stories, .top-authors{
+  margin-bottom:10%;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #3D2892;
+  filter: drop-shadow(1px 1px 4px rgba(128, 128, 128, 0.368));
+}
+
+.paramdamstory{
+  position: absolute;
+  margin-left: 14%;
+}
+.Story_Title{
+  margin-bottom:10%;
+  color: #3D2892;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  filter: drop-shadow(1px 1px 4px rgba(128, 128, 128, 0.368));
+}
+
+.StoryOne{
+   font-size: 28px;
+    margin-bottom: 2%;
+    margin-left: 4%;
+    color: #3D2892;
+  }
+.paramdam1{
+    width: 115%;
   
+}
+.Story_Title{
+  text-align: center;
+  font-size: 28px;
+  color: #3D2892;
+}
+img.storyone{
+  float: left;
+  padding: 0 10rem 0 4rem;
+  margin-left: 1rem;
+  filter: drop-shadow(-8px -8px #F55D3A);
+}
+.title-paramdam{
+  margin-bottom: 2%;
+  margin-left: 3%;
+  font-size: 28px;
+  color: #3D2892;
+}
+.bgcolor1{
+  margin-left: 45%;
+  color: gray;
+}
+.detail{
+  font-size: 18px;
+  font-family: 'Lora', serif;
+  margin-inline-end: 31%;
+  text-align:start;
+}
+
+.StoryTwo{
+  position: absolute;
+  margin-left: 60%;
+}
+.readmore, .readmore1{
+  text-decoration: none;
+  color:#F55D3A;
+  font-size: 20px;
+  filter: drop-shadow(1px 1px 4px rgba(128, 128, 128, 0.244));
+  font-weight: bold;
+  margin-top: 2%;
+
+  margin-left: -0.3%;
+
+}
+.readmore1{
+  margin-left: -27.2%;
+
+}
+.SecondStory{
+  margin-bottom: 2%;
+  margin-left: -61%;
+  font-size: 28px;
+  color: #3D2892;
+}
+
+.Senyalesimg{
+  width: 115%;
+}
+.bgcolor2{
+  margin-right: 40%;
+  color: gray;
+}
+.story2{
+  margin-left: 24%;
+  margin-inline-end: 12%;
+  font-size: 18px;
+  font-family: 'Lora', serif;
+  text-align:start;
 }
 
